--- a/about-hugo/index.html
+++ b/about-hugo/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>https://idelsonmindo.com/contact/</title>
-    <link rel="canonical" href="https://idelsonmindo.com/contact/">
+    <title>http://idelsonmindo/contact/</title>
+    <link rel="canonical" href="http://idelsonmindo/contact/">
     <meta name="robots" content="noindex">
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=https://idelsonmindo.com/contact/">
+    <meta http-equiv="refresh" content="0; url=http://idelsonmindo/contact/">
   </head>
 </html>
